2011-09-13  Guillaume Lazzara  <z@lrde.epita.fr>

	Fix text justification in HTML document reconstruction.

	* demo/xml2doc/templates/html/css.css,
	* demo/xml2doc/templates/html/main.xsl,
	* demo/xml2doc/templates/html/main_base64.xsl: Add new CSS rules.

2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	Small fixes in Scribo.

	* demo/viewer/icons/olena_smaller.jpg,
	* demo/viewer/viewer.qrc: Change icon location.

	* scribo/text/paragraphs_closing.hh: Avoid a warning.

	* src/content_in_doc.cc: Fix a parameter description.

	* src/debug/show_lines_boldness.cc,
	* src/debug/show_text_lines.cc,
	* src/debug/show_text_lines_wo_seps.cc: Remove useless includes.

	* src/scribo-cli.in: Pass arguments correctly.

2011-09-12  Guillaume Lazzara  <z@lrde.epita.fr>

	More fixes in Scribo build system.

	* demo/viewer/Makefile.am: Add missing distributed files.

	* src/contest/DAE-2011/Makefile.am,
	* src/contest/hdlac-2011/Makefile.am,
	* src/debug/Makefile.am: Fix dependencies.

2011-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Fix compilation dependencies of unit tests in Scribo.

	* tests/unit_test/Makefile.am (COND_TESTS):
	Add cond_tests_magickxx, cond_tests_magickxx_qt and
	cond_tests_magickxx_tesseract.
	Remove cond_tests_qt_tesseract_tiff.
	* tests/unit_test/cond_tests_magickxx,
	* tests/unit_test/cond_tests_magickxx_qt,
	* tests/unit_test/cond_tests_magickxx_tesseract:
	New.
	* tests/unit_test/cond_tests_qt_tesseract_tiff: Remove (empty)
	file.
	* tests/unit_test/cond_tests_magickxx_tesseract_tiff: Add
	scribo/toolchain/content_in_doc.hh.
	* tests/unit_test/cond_tests_qt: Remove
	scribo/io/xml/internal/full_xml_visitor.hh and
	scribo/io/xml/load.hh.
	* tests/unit_test/cond_tests_tesseract_tiff: Remove.
	scribo/toolchain/content_in_doc.hh.
	* tests/unit_test/cond_tests_magickxx_qt_tesseract_tiff:
	Remove empty line.
	* tests/unit_test/unit-tests.mk: Regen.

2011-09-10  Roland Levillain  <roland@lrde.epita.fr>

	Fix compilation dependencies in Scribo.
